Bug 721322 - Functions containing |expr.arguments| should be marked (conservatively) as using arguments.  r=jorendorff